#
# Copyright (C) 2020-2021 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "libsignal-wasm"
version = "0.8.4"
authors = ["Emelia Smith <emelia@unobvious.technology>"]
license = "AGPL-3.0-only"
edition = "2018"

[lib]
path = "../rust/bridge/wasm/src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
libsignal-wasm-bridge = { path = "../rust/bridge/wasm" }
